# oi-dbt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  IREmitter.cpp  IROpt.cpp  IRUtils.cpp  ITDInterpreter.cpp  LICENSE  Makefile  OIDecoder.cpp  README.md  TODO  cmake_install.cmake  compile_commands.json  dudect.cpp  interpreter.cpp  machine.cpp  main.cpp  manager.cpp  out  output  r520.ll  regionMerge.cpp  run.sh  stats.cpp  stats.py  syscall.cpp  syscallIREmitter.cpp
RFT/: CMakeLists.txt  LEF.cpp  LEI.cpp  MRET2.cpp  Makefile  MethodBased.cpp  NET.cpp  NETPlus.cpp  Preheat.cpp  RFT.cpp  cmake_install.cmake
arglib/: CMakeLists.txt  Makefile  arglib.cpp  cmake_install.cmake
autotest/: compile.sh  run.sh
autotest/benchmarks/CRC32/: Makefile.oi  compile.sh
autotest/benchmarks/FFT/: Makefile.oi  compile.sh
autotest/benchmarks/adpcm/: compile.sh
autotest/inputs/: output_large.enc
doc/html/: _i_r_emitter_8hpp_source.html  _i_r_lazy_j_i_t_8hpp_source.html  _i_r_opt_8hpp_source.html  _o_i_decoder_8hpp_source.html  _o_i_printer_8hpp_source.html  _r_f_t_8hpp_source.html  annotated.html  annotated_dup.js  arglib_8hpp_source.html  class_e_l_f_i_o_1_1dump-members.html  class_e_l_f_i_o_1_1dump.html  class_e_l_f_i_o_1_1dynamic__section__accessor-members.html  class_e_l_f_i_o_1_1dynamic__section__accessor.html  class_e_l_f_i_o_1_1dynamic__section__accessor.js  class_e_l_f_i_o_1_1elf__header-members.html  class_e_l_f_i_o_1_1elf__header.html  class_e_l_f_i_o_1_1elf__header.js  class_e_l_f_i_o_1_1elf__header__impl-members.html  class_e_l_f_i_o_1_1elf__header__impl.html  class_e_l_f_i_o_1_1elf__header__impl.js  class_e_l_f_i_o_1_1elf__header__impl__coll__graph.map  class_e_l_f_i_o_1_1elf__header__impl__coll__graph.md5  class_e_l_f_i_o_1_1elf__header__inherit__graph.map  class_e_l_f_i_o_1_1elf__header__inherit__graph.md5  class_e_l_f_i_o_1_1elfio-members.html  class_e_l_f_i_o_1_1elfio.html  class_e_l_f_i_o_1_1elfio.js  class_e_l_f_i_o_1_1elfio_1_1_sections-members.html  class_e_l_f_i_o_1_1elfio_1_1_sections.html  class_e_l_f_i_o_1_1elfio_1_1_sections.js  class_e_l_f_i_o_1_1elfio_1_1_segments-members.html  class_e_l_f_i_o_1_1elfio_1_1_segments.html  class_e_l_f_i_o_1_1elfio_1_1_segments.js  class_e_l_f_i_o_1_1elfio__coll__graph.map  class_e_l_f_i_o_1_1elfio__coll__graph.md5  class_e_l_f_i_o_1_1endianess__convertor-members.html  class_e_l_f_i_o_1_1endianess__convertor.html  class_e_l_f_i_o_1_1endianess__convertor.js  class_e_l_f_i_o_1_1note__section__accessor-members.html  class_e_l_f_i_o_1_1note__section__accessor.html  (+954 more)
doc/latex/: annotated.tex  class_e_l_f_i_o_1_1dump.tex  class_e_l_f_i_o_1_1dynamic__section__accessor.tex  class_e_l_f_i_o_1_1elf__header.tex  class_e_l_f_i_o_1_1elf__header__impl.tex  class_e_l_f_i_o_1_1elf__header__impl__inherit__graph.md5  class_e_l_f_i_o_1_1elf__header__inherit__graph.md5  class_e_l_f_i_o_1_1elfio.tex  class_e_l_f_i_o_1_1elfio_1_1_sections.tex  class_e_l_f_i_o_1_1elfio_1_1_segments.tex  class_e_l_f_i_o_1_1elfio__coll__graph.md5  class_e_l_f_i_o_1_1endianess__convertor.tex  class_e_l_f_i_o_1_1note__section__accessor.tex  class_e_l_f_i_o_1_1relocation__section__accessor.tex  class_e_l_f_i_o_1_1section.tex  class_e_l_f_i_o_1_1section__impl.tex  class_e_l_f_i_o_1_1section__impl__coll__graph.md5  class_e_l_f_i_o_1_1section__inherit__graph.md5  class_e_l_f_i_o_1_1segment.tex  class_e_l_f_i_o_1_1segment__impl.tex  class_e_l_f_i_o_1_1segment__impl__coll__graph.md5  class_e_l_f_i_o_1_1segment__inherit__graph.md5  class_e_l_f_i_o_1_1string__section__accessor.tex  class_e_l_f_i_o_1_1symbol__section__accessor.tex  class_hash_object.tex  classclarg_1_1arg__base.tex  classclarg_1_1arg__base__inherit__graph.md5  classclarg_1_1arg_bool.tex  classclarg_1_1arg_bool__coll__graph.md5  classclarg_1_1arg_double.tex  classclarg_1_1arg_double__inherit__graph.md5  classclarg_1_1arg_int.tex  classclarg_1_1arg_int__inherit__graph.md5  classclarg_1_1arg_string.tex  classclarg_1_1arg_string__inherit__graph.md5  classclarg_1_1arg_t.tex  classclarg_1_1arg_t__coll__graph.md5  classclarg_1_1arg_t__inherit__graph.md5  classclarg_1_1args__container.tex  classclarg_1_1container__manager.tex  (+275 more)
include/: .OIDecoder.hpp.swp  IREmitter.hpp  IRJIT.hpp  IRLazyJIT.hpp  IROpt.hpp  OIDecoder.hpp  OIPrinter.hpp  RFT.hpp  dudect.hpp  interpreter.hpp  machine.hpp  manager.hpp  stats.hpp  syscall.hpp  syscallIREmitter.hpp  timer.hpp
include/arglib/: arglib.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
test/: .helloword.c  ackermann.c  arithmeticTest.c  array.c  ary3.c  bubble.c  bubblesort.c  charTest.c  chomp.c  dry.c  dt.c  fac.c  fannkuch.c  fannkunch.c  fbench.c  ffbench.c  fib2.c  fldry.c  flops-1.c  fp-convert.c  fp-min.c  fp-simple.c  half.c  heapsort.c  helloworld.c  intmm.c  ipow.c  lists.c  main.c  mandel-2.c  matrix.c  methcall.c  mm.c  mret2test.c  n-body.c  nested.c  nestedloop.c  nestedloopwithIF.c  nsieve-bits.c  oscar.c  (+11 more)
test/experiments/: array.c  ary3.c  bubblesort.c  chomp.c  dry.c  dt.c  fannkuch.c  fbench.c  ffbench.c  fldry.c  floatmm.c  flops-1.c  fp-convert.c  graph.R  heapsort.c  intmm.c  lists.c  methcall.c  n-body.c  nested.c  nsieve-bits.c  pi.c  puzzle.c  queens.c  quicksort.c  recursive.c  runExperiment.sh  sieve.c  spectral-norm.c  treesort.c
test/notworking/: fp-convert.c  oscar.c
test/todo/: ary3.c  bubble.c  native  sieve.c
(+282 files in other folders)
